@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.cadoculus</groupId>
+    <groupId>de.groygroy</groupId>
     <artifactId>Java25</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -13,6 +13,29 @@
         <maven.compiler.target>25</maven.compiler.target>
         <compilerArgs>--enable-preview</compilerArgs>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javafx.version>25-ea+2</javafx.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>25</source>
+                    <target>25</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+<!--    <dependencies>-->
+<!--        <dependency>-->
+<!--            <groupId>io.github.mkpaz</groupId>-->
+<!--            <artifactId>atlantafx-base</artifactId>-->
+<!--            <version>2.0.1</version>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
+
 
 </project>
